Bug 425953 - undefined reference to `KWindowConfig::allConnectedScreens()'
Summary: undefined reference to `KWindowConfig::allConnectedScreens()'
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfig
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Dawson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-29 17:28 UTC by Bernhard Landauer
Modified: 2020-09-03 18:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
full build log (70.08 KB, text/plain)
2020-08-29 17:28 UTC, Bernhard Landauer
Details
build log for commit 803b9f16 (74.23 KB, text/plain)
2020-08-30 06:48 UTC, Bernhard Landauer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Landauer 2020-08-29 17:28:21 UTC
Created attachment 131265 [details]
full build log

SUMMARY
Latest git commit fails to build with error:

/usr/bin/ld: CMakeFiles/Py3KF5KConfigGui.dir/pybuild/PyKF5/KConfigGui/unifiedKConfigGui.cpp.o: in function `meth_KWindowConfig_allConnectedScreens':
/build/kconfig-git/src/build/src/gui/pybuild/PyKF5/KConfigGui/sipKConfigGuiKWindowConfig.cpp:27: undefined reference to `KWindowConfig::allConnectedScreens()'
collect2: error: ld returned 1 exit status

full build log is attached.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Comment 1 Nicolas Fella 2020-08-29 18:08:45 UTC
Same here, needs newer KConfig 

https://invent.kde.org/frameworks/kconfig/-/commit/803b9f16e0b9133ddfef40dd16a368c39fa1b0a6
Comment 2 Bernhard Landauer 2020-08-29 18:19:27 UTC
What I am trying to say is, that latest commit fails to build!
Comment 3 Bernhard Landauer 2020-08-30 06:46:34 UTC
(In reply to Nicolas Fella from comment #1)
> Same here, needs newer KConfig 
> 
> https://invent.kde.org/frameworks/kconfig/-/commit/
> 803b9f16e0b9133ddfef40dd16a368c39fa1b0a6

That's exactly the commit giving the error.
I'm attaching full build log again.
Comment 4 Bernhard Landauer 2020-08-30 06:48:34 UTC
Created attachment 131280 [details]
build log for commit 803b9f16
Comment 5 Bernhard Landauer 2020-09-01 08:29:47 UTC
Your reply doesn't make much sense.
I'm saying that commit 803b9f16 fails to build and you are pointing back to the same commit itself ;) ?
Comment 7 Bernhard Landauer 2020-09-02 13:05:26 UTC
Thank you, @hchain, this fixes it for me.
Comment 8 Bug Janitor Service 2020-09-03 17:29:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfig/-/merge_requests/23
Comment 9 Nate Graham 2020-09-03 18:44:28 UTC
Git commit a1ffd1418f355ae927c9b7859cffcb6caa767306 by Nate Graham.
Committed on 03/09/2020 at 18:28.
Pushed by ngraham into branch 'master'.

Make KWindowConfig::allConnectedScreens() static and internal

It doesn't need to be public since it's just an internal convenience
function. So let's make it static.

M  +12   -11   src/gui/kwindowconfig.cpp
M  +0    -7    src/gui/kwindowconfig.h

https://invent.kde.org/frameworks/kconfig/commit/a1ffd1418f355ae927c9b7859cffcb6caa767306