Make KWindowConfig::allConnectedScreens() static and internal

It doesn't need to be public since it's just an internal convenience
function. So let's make it static.

BUG: 425953